--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <p>
             To learn more about my work history, check out my
-            <a href="resume.html">résumé</a>. Thanks for stopping by!
+            <a href="https://whipperearner.github.io/Resume/index.html">résumé</a>. Thanks for stopping by!
           </p>
         </main>
       </div>
