--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
           <!-- Start content edits below this line. -->
           <h1>Irfan Patel</h1>
-          <h2>Web Developer | Entrepreneur | Business Developer</h2>
+          <h2>UX Enthusiast | Frontend Developer | Entrepreneur | Business Developer</h2>
 
           <!-- End content edits here. -->
         </header>
