--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               >UX Projects page</a
             >
             or my Github Repositories:
-            <a href="irfannpatel.com/front_end_projects" target="_blank"
+            <a href="https://github.com/WhipperEarner?tab=repositories" target="_blank"
               >Decoded by Irfan</a
             >.
           </p>
