--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
           <!-- Start content edits below this line. -->
           <h1>Irfan Patel</h1>
-          <h2>UX Designer | Business Analysis | Strategic Optimization | FrontEnd Design</h2>
+          <h2>UX Designer | Business Analysis | Strategic Optimization | Frontend Design</h2>
 
           <!-- End content edits here. -->
         </header>
