--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
           <!-- Start content edits below this line. -->
           <h1>Irfan Patel</h1>
-          <h2>Data Analysis | Process Optimization | Business Systems Optimization | Marketing</h2>
+          <h2>Marketing Data Analysis | Process Optimization | Business Systems Optimization | Data Storytelling</h2>
 
           <!-- End content edits here. -->
         </header>
