--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
         <!-- //  ABOUT ME  // -->
         <main class="content-wrapper">
           <p>
-            As a seasoned Front-End and UX Web Developer with a strong
-            entrepreneurial background, I have over 15 years of experience in
-            retail and distribution, including a tenure at the GHRA trade
-            association. This experience has honed my skills in business
-            development and web design. As a versatile web designer, I
-            collaborate with the management team to create engaging content for
-            our website and publications. My unique blend of entrepreneurial
-            acumen and web design expertise allows me to deliver innovative
-            solutions that enhance user experiences.You can visit my
+            As a results-oriented professional with 15+ years of experience in business systems optimization, data analysis, and process improvement, I've consistently exceeded expectations. My journey includes successful stints at Lakepoint Estate LLC and ZSB Enterprise LLC, complemented by the valuable lessons learned from my entrepreneurial ventures with Humber Enterprise LLC and Azhaar Enterprise LLC. I thrive on challenges, seeking innovative solutions to enhance operational efficiency, improve vendor relations, and drive significant cost reductions. My passion lies in leveraging technology and data to empower businesses, particularly within the dynamic oil and gas sector. I'm a strong advocate for clear communication, user-friendly dashboards, and scalable solutions that deliver sustainable results. You can visit my
             <a href="irfannpatel.com/UX-Projects-Home" target="_blank"
               >UX Projects page</a
             >
